--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,14 @@ table {
   width: 105px;
 }
 
+body {
+  background-image: url("https://png.pngtree.com/background/20210710/original/pngtree-vector-icon-wind-fast-food-background-picture-image_981298.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  margin: 0;
+}
+
 @media screen and (min-width: 768px) {
   .add-restaurant-button {
     width: 1rem;
