--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,6 +26,11 @@ body {
   margin: 0;
 }
 
+.loading-container {
+  height: 100vh;
+  width: 100vw;
+}
+
 @media screen and (min-width: 768px) {
   .add-restaurant-button {
     width: 1rem;
