--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,6 +31,13 @@ body {
   width: 100vw;
 }
 
+.error-container {
+  border: 0.25rem solid black;
+  border-radius: 0.55rem;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
 @media screen and (min-width: 768px) {
   .add-restaurant-button {
     width: 1rem;
