--- a/client/src/App.css
+++ b/client/src/App.css
@@ -76,6 +76,11 @@ body {
   border-radius: 0.25rem;
 }
 
+.form-container {
+  display: flex;
+  justify-content: center;
+}
+
 @media screen and (min-width: 768px) {
   .add-restaurant-button {
     width: 1rem;
