--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 .main-header {
   display: flex;
   text-align: center;
@@ -14,13 +10,21 @@ table {
   width: 100%;
 }
 
-/* .add-restaurant-button {
-  padding-left: 1.25rem;
-} */
+.form {
+  background-color: white;
+  max-width: 80%;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
 
-.add-restaurant-select {
-  height: 2rem;
-  width: 5rem;
+.form-button {
+  margin-top: 10px;
 }
 
 body {
@@ -63,10 +67,6 @@ body {
   padding-left: 1.5rem;
 }
 
-/* .new-store-form {
-  padding-left: 1.75rem;
-} */
-
 .update-text,
 .review-text,
 .main-text {
@@ -76,31 +76,6 @@ body {
   border-radius: 0.25rem;
 }
 
-.form-container {
-  display: flex;
-  justify-content: center;
-}
-
 tbody {
   cursor: pointer;
-}
-
-@media screen and (min-width: 768px) {
-  /* .add-restaurant-button {
-    width: 1rem;
-  } */
-  .add-restaurant-select-container {
-    margin-bottom: 0.25rem;
-  }
-  .add-restaurant-select {
-    height: 2.25rem;
-    width: 140px;
-  }
-  .form-container {
-    display: flex;
-    justify-content: space-evenly;
-  }
-  .navbar-text {
-    padding-left: 4rem;
-  }
 }
