--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,6 +63,7 @@ body {
 
 .navbar-text {
   padding-left: 1.5rem;
+  padding-top: 1.25rem;
 }
 
 .update-text,
@@ -79,7 +80,7 @@ tbody {
 }
 
 .list-group {
-  padding-left: 0.5rem;
+  padding-left: 1rem;
 }
 
 @media screen and (max-width: 992px) {
